2006-08-24  Francis Kung  <fkung@redhat.com>
	* gnu/java/awt/color/PyccConverter.java: Throw UnsupportedOperationExceptions.
	* java/awt/image/ColorConvertOp.java: Updated javadocs.
	(srccs, dstcs, rasterValid): Variables removed.
	(ColorConvertOp(RenderingHints)): Initialize spaces to empty array.
	(copyRaster): Check for null rendering hints
	(createCompatibleColorModel): New private method.
	(createCompatibleDestImage): Re-implemented.
	(createCompatibleDestRaster(Raster, ColorSpace, boolean)): New private method.
	(createCompatibleDestRaster(Raster)): Re-implemented.
	(filter(BufferedImage, BufferedImage)): Add checks; fix temp image creation.
	(filter(Raster, WritableRaster)): Add checks; fix temp raster creation.
	(getPoint2D): Clean up formatting.
	* java/awt/image/ComponentColorModel.java
	(constructor): use findBits method instead of passing null.
	(findBits): New method.

2006-08-24  Gary Benson  <gbenson@redhat.com>

	* java/net/NetworkInterface.java (getInetAddresses): Bracket IPv6
	addresses.

2006-08-24  Jeroen Frijters  <jeroen@frijters.net>

	* java/lang/ref/Reference.java
	(queue, nextOnQueue): Made volatile.
	(enqueue): Made thread safe.
	* java/lang/ref/ReferenceQueue.java
	(lock): New field.
	(poll): Removed synchronized.
	(enqueue): Changed to synchronize on lock object, to update Reference
	state and return success status.
	(dequeue, remove): Synchronize on lock object.

2006-08-24  Jeroen Frijters  <jeroen@frijters.net>

	* java/security/SecureClassLoader.java
	(protectionDomainCache): Changed to HashMap.
	(SecureClassLoader): Removed redundant security check.
	(defineClass(String,byte[],int,int,CodeSource): Moved
	protection domain lookup/construction to new method.
	(defineClass(String,ByteBuffer,CodeSource): New method.
	(getProtectionDomain): New method.

2006-08-23  Roman Kennke  <kennke@aicas.com>

	* javax/swing/JComponent.java
	(isRepainting): Made package private.
	(paintChild): New field.